--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Html5 Poc</title>
+    <title>shop</title>
     <link type="text/css" rel="stylesheet" href="css/common.css">
     <script type="text/javascript" src="scripts/lib.js"></script>
     <script type="text/javascript" src="scripts/common.js"></script>
 </head>
 <body>
 <div>
-    <div>hello world!</div>
-    <video autoplay id="video"></video>
-    <img src="" id="img"/>
-    <canvas id="mainCanvas"></canvas>
+    <ul>
+        <li>hi world</li>
+    </ul>
 </div>
 </body>
 </html>
